--- a/css/slider.css
+++ b/css/slider.css
@@ -1,28 +1,16 @@
-*, *:before, *:after {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: sans-serif;
-  padding: 0px 0px;
-}
-@media (min-width: 600px) {
-  body {
-    padding: 60px;
-  }
-}
 
-.range-slider {
-  margin: 60px 0 0 0%;
-}
+/* .range-slider { */
+  /* margin: 60px 0 0 0%; */
+/* } */
 
-.range-slider {
-  width: 100%;
-}
+/* .range-slider { */
+  /* width: 100%; */
+/* } */
 
 .range-slider__range {
   -webkit-appearance: none;
-  width: calc(100% - (73px));
+  width: calc(100%);
   height: 10px;
   border-radius: 5px;
   background: #d7dcdf;
